# dashboard-work

./: .env  Anchor.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
pack/src/idl/: escrow_program.json
programs/escrow_program/: Cargo.toml
programs/escrow_program/src/: lib.rs
scripts/: print_treasury_ata.mjs  solana_doctor.sh
src/: App.vue  main.js
src/assets/: base.css  main.css  wallet-adapter.css
src/auth/: errors.js
src/components/: AdminSection.vue  AuthLanding.vue  ContractCreationModal.vue  ContractPreviewModal.vue  ContractsSection.vue  DaoDisputesSection.vue  DashboardView.vue  JobsSection.vue  MessagesSection.vue  OverviewSection.vue  ProfileSection.vue  RechargerJobsSection.vue  SearchJobsSection.vue
src/contract/: phantom.js  pickers.js  state.js  submit.js  usdc.js  utils.js
src/createContract/: backend.js  disputeAction.js  formatters.js  keys.js  permissions.js  phantom.js  programContext.js  selectors.js  withAction.js
src/data/: countries.js
src/idl/: escrow_program.json
src/services/: EscrowUSDC.sol  api.js  authApi.js  contractsApi.js  conversationsApi.js  friendsApi.js  http.js  jobsApi.js  messagesApi.js  profileApi.js  publicApi.js  solana.js  usersApi.js  walletApi.js
src/solana/: connection.js  idl.js  keys.js  pdas.js  phantom.js  program.js  usdc.js
src/solana/tx/: fundTx.js
src/store/: auth.js  contracts.js  conversations.js  dashboardData.js  jobs.js  profile.js  walletConfig.js
src/views/: MessagesView.vue
