[package]
name = "escrow_program"
version = "0.1.0"
description = "Byhnex escrow USDC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl  = "0.30.1"

# Pins pour éviter borsh 1.6+ (rustc >= 1.77)
borsh_v1 = { package = "borsh", version = "=1.5.1" }
borsh_derive_v1 = { package = "borsh-derive", version = "=1.5.7" }

[build-dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
